# starbug2

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  python-publish.yml
docs/source/: conf.py  install.rst
docs/source/usage/: matching.rst
starbug2/: __init__.py  artificialstars.py  constants.py  filters.py  initialise_psf_data.py  mask.py  matching.py  misc.py  param.py  plot.py  routines.py  star_bug_config.py  star_bug_interface.py  starbug.py  utils.py
starbug2/command_line_interfaces/: ast.py  main.py  match.py  plot.py
starbug2/core/: artificialstars.py  constants.py  plot.py  star_bug_config.py  starbug_main.py
starbug2/extras/: .default.param  logo.txt
starbug2/interfaces/: star_bug_interface.py
starbug2/jwst_support/: initialise_psf_data.py
starbug2/matching/: band_match.py  cascade_match.py  dither_match.py  exact_value_match.py  generic_match.py
starbug2/routines/: app_hot_routine.py  artificial_star_routine.py  background_estimate_routine.py  detection_routines.py  psf_phot_routine.py  source_properties.py
starbug2/utilities/: __init__.py  filters.py  mask.py  misc.py  param.py  utils.py
tests/: generic.py  test_ast.py  test_match_run.py  test_matching.py  test_misc.py  test_param.py  test_routines.py  test_run.py  test_starbug.py  test_system_results.py  test_utils.py  xtest_artificialstars.py
tests/dat/: readme.txt
tests/libby_tests/: make_jwst_yso_sedfitter_infile.py  sed_fit_YSO_zipModels.py  sedfit_best_model_all_grids.py  sedfit_grid_summary.py
tests/param_files/: old_format.param
(+5 files in other folders)
